--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,5 +6,7 @@
 @use 'blocks/titles.scss';
 @use 'blocks/body.scss';
 @use 'blocks/header.scss';
+@use 'blocks/menu.scss';
+@use 'blocks/about-me.scss';
 @use 'blocks/main.scss';
 @use 'blocks/footer.scss';
