--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -1,7 +1,5 @@
 html {
 }
 body {
- 
- font-family: 'Nunito Sans', sans-serif;
- background-color: var(--very-light-grey);
+    font-family: 'Galvji';;
 }
