--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,16 +1,7 @@
 :root {
-  //(Dark Mode Elements)
-  --dark-blue: hsl(209, 23%, 22%);
-  //(Dark Mode Background)
-  --very-dark-blue: hsl(207, 26%, 17%);
-  //(Light Mode Text)
-  --dark-light-blue: hsl(200, 15%, 8%);
-  //(Light Mode Input)
-  --dark-grey: rgb(254, 254, 254);
-  //(Light Mode Background)
-  --very-light-grey: hsl(53, 44%, 85%);
-  //(dark mode text & light mode elements):
-  --white: hsl(0, 0%, 100%);
+  --backgroud---color: #F9F7E1;
+  --secondary-color: #FFA13B;
+  
 }
 
 
