--- a/src/scss/blocks/about-me.scss
+++ b/src/scss/blocks/about-me.scss
@@ -37,6 +37,7 @@
 .presentation__text{
     width: 350px;
     height: 400px;
+    line-height: 30px;
     font-size: 1.5rem;
     transform: translateX(1000px);
     opacity: 0;
