--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,5 +8,6 @@
 @use 'blocks/header.scss';
 @use 'blocks/menu.scss';
 @use 'blocks/about-me.scss';
+@use 'blocks/projects.scss';
 @use 'blocks/main.scss';
 @use 'blocks/footer.scss';
