--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -1,8 +1,7 @@
-
 .header{
     width: 100%;
     min-height:700px;
-    background-color: var(--backgroud---color);
+    background-color: var(--background--color);
 }
 
 .menu-container{
@@ -36,3 +35,54 @@
     margin-right: auto;
     margin-top: -30px;
 }
+
+
+.span-title{
+    width: 100%;
+    float: left;
+    color: var(--secondary-color);
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    transform: translateY(-50px);
+    opacity: 0;
+    animation-name: titleAnimation;
+    animation-timing-function:ease;
+    animation-duration: 4s;
+  }
+
+.title__intro, .span-title{
+  animation-delay: 0.9s;
+  -webkit-animation-fill-mode: forwards;
+
+  &:first-child{
+    animation-delay: 0.6s;
+
+  }
+
+  &:last-child{
+    color: var(--secondary-color);
+    animation-delay: 0.8s;
+  }
+}
+
+    @keyframes titleAnimation {
+        0% {
+          transform: translateY(-50px);
+          opacity: 0;
+          -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+          clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+      }
+      20% {
+          transform: translateY(0);
+          opacity: 1;
+          -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+          clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+      }
+      100% {
+        transform: translateY(0);
+        opacity: 1;
+       -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+       clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+        
+      }
+    }
