--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,5 +9,6 @@
 @use 'blocks/menu.scss';
 @use 'blocks/about-me.scss';
 @use 'blocks/projects.scss';
+@use 'blocks/contact.scss';
 @use 'blocks/main.scss';
 @use 'blocks/footer.scss';
