--- a/src/scss/blocks/about-me.scss
+++ b/src/scss/blocks/about-me.scss
@@ -10,7 +10,7 @@
 }
 
 .presentation__title{
-    margin-top: 220px;
+    margin-top: 350px;
     margin-bottom: 50px;
     text-align: center;
     font-size: 3rem;
@@ -24,10 +24,11 @@
     justify-content: center;
     align-items: center;
     gap: 15px;
+    overflow: hidden;
 }
 
 .presentation__photo{
-    width: 250px;
+    width: 320px;
     height: 400px;
     border-radius: 3px;
     transform: translateX(-1000px);
