--- a/src/scss/blocks/projects.scss
+++ b/src/scss/blocks/projects.scss
@@ -1,5 +1,5 @@
 .projects-section{
-    margin-top: 700px;
+    margin-top: 800px;
     width: 100%;
 }
 
@@ -7,12 +7,11 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin-left: auto;
-    margin-right: auto;
+    padding: 50px;
 }
 
 .project{
-    width: 70%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
